# prodRAG

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt
core/: doc_store.py  llm_call.py  prompt_template.py
haystack/: haystack.ipynb  pipeline.py
langchain/: __init__.py  langchain.ipynb  pipeline.py
langgraph/: langgraph.ipynb  pipeline.py
