[project]
name = "prodrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.26.1",
    "ipykernel>=7.2.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "pinecone-haystack>=6.1.2",
    "pypdf>=6.9.2",
]
